<resources>
    <string name="app_name">smsser</string>
    <string name="click_me">click me!</string>
    <string name="done">Done!</string>
    <string name="ping_button">Ping the service!</string>
    <string name="call_ping">Call ping service</string>
    <string name="get_proto_ping_response">Get a proto response form ping</string>
    <string name="push_all_to_smsser">Push all messages to smsser</string>
    <string name="check_for_sms_waiting_for_push">List messages waiting for push</string>

    <string name="enter_your_number">Enter your number:</string>
    <string name="please_type_in_your_number">Please type your phone number (format: +48555222333):</string>

    <!-- placeholders -->
    <string name="my_number">+48........</string>
    <string name="my_email">example@gmail.com</string>

    <!-- menus -->
    <string name="settings">Settings</string>

    <!-- preferences -->
    <string name="smsser_preference_category">Smsser Settings</string>

    <string name="phone_number">Your phone number</string>
    <string name="phone_number_summary">Sometimes the phonenumber cannot be determined by looking at your SIM card, so if this value is wrong, please fix it.</string>

    <string name="jump_to_website">Smsser homepage</string>
    <string name="jump_to_website_summary">Jump to the author's homepage</string>

    <!-- shared preferences keys -->
    <string name="preference_key_phone_number">phone_number</string>
    <string name="preference_key_last_synced_date">last_synced_sms_date</string>
</resources>
